tests/ui/target-feature/invalid-attribute.stderr
error: malformed `target_feature` attribute input
  --> $DIR/invalid-attribute.rs:16:1
   |
LL | #[target_feature = "+sse2"]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: must be of the form: `#[target_feature(enable = "name")]`

error: attribute should be applied to a function definition
  --> $DIR/invalid-attribute.rs:33:1
   |
LL | #[target_feature(enable = "sse2")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LL |
LL | mod another {}
   | -------------- not a function definition

error: attribute should be applied to a function definition
  --> $DIR/invalid-attribute.rs:38:1
   |
LL | #[target_feature(enable = "sse2")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LL |
LL | const FOO: usize = 7;
   | --------------------- not a function definition

error: attribute should be applied to a function definition
  --> $DIR/invalid-attribute.rs:43:1
   |
LL | #[target_feature(enable = "sse2")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LL |
LL | struct Foo;
   | ----------- not a function definition

error: attribute should be applied to a function definition
  --> $DIR/invalid-attribute.rs:48:1
   |
LL | #[target_feature(enable = "sse2")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LL |
LL | enum Bar {}
   | ----------- not a function definition

error: attribute should be applied to a function definition
  --> $DIR/invalid-attribute.rs:53:1
   |
LL |   #[target_feature(enable = "sse2")]
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LL |
LL | / union Qux {
LL | |
LL | |     f1: u16,
LL | |     f2: u16,
LL | | }
   | |_- not a function definition

error: attribute should be applied to a function definition
  --> $DIR/invalid-attribute.rs:61:1
   |
LL | #[target_feature(enable = "sse2")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LL |
LL | trait Baz {}
   | ------------ not a function definition

error: attribute should be applied to a function definition
  --> $DIR/invalid-attribute.rs:84:5
   |
LL |       #[target_feature(enable = "sse2")]
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LL |
LL | /     unsafe {
LL | |         foo();
LL | |         bar();
LL | |     }
   | |_____- not a function definition

error: attribute should be applied to a function definition
  --> $DIR/invalid-attribute.rs:92:5
   |
LL |     #[target_feature(enable = "sse2")]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LL |
LL |     || {};
   |     ----- not a function definition

error: the feature named `foo` is not valid for this target
  --> $DIR/invalid-attribute.rs:18:18
   |
LL | #[target_feature(enable = "foo")]
   |                  ^^^^^^^^^^^^^^ `foo` is not valid for this target

error: malformed `target_feature` attribute input
  --> $DIR/invalid-attribute.rs:21:18
   |
LL | #[target_feature(bar)]
   |                  ^^^ help: must be of the form: `enable = ".."`

error: malformed `target_feature` attribute input
  --> $DIR/invalid-attribute.rs:23:18
   |
LL | #[target_feature(disable = "baz")]
   |                  ^^^^^^^^^^^^^^^ help: must be of the form: `enable = ".."`

error[E0658]: `#[target_feature(..)]` can only be applied to `unsafe` functions
  --> $DIR/invalid-attribute.rs:27:1
   |
LL | #[target_feature(enable = "sse2")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
LL | fn bar() {}
   | -------- not an `unsafe` function
   |
   = note: see issue #69098 <https://github.com/rust-lang/rust/issues/69098> for more information
   = help: add `#![feature(target_feature_11)]` to the crate attributes to enable

error: cannot use `#[inline(always)]` with `#[target_feature]`
  --> $DIR/invalid-attribute.rs:66:1
   |
LL | #[inline(always)]
   | ^^^^^^^^^^^^^^^^^

error[E0658]: `#[target_feature(..)]` can only be applied to `unsafe` functions
  --> $DIR/invalid-attribute.rs:76:5
   |
LL |     #[target_feature(enable = "sse2")]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
LL |     fn foo() {}
   |     -------- not an `unsafe` function
   |
   = note: see issue #69098 <https://github.com/rust-lang/rust/issues/69098> for more information
   = help: add `#![feature(target_feature_11)]` to the crate attributes to enable

error: aborting due to 15 previous errors

For more information about this error, try `rustc --explain E0658`.
